--- a/src/app/celestials/celestial-form/celestial-form.component.html
+++ b/src/app/celestials/celestial-form/celestial-form.component.html
@@ -1,13 +1,10 @@
 <form class="form celestials__form">
   <div class="celestials__form__title"><h2>123</h2></div>
   <div class="celestials__form__inputs">
-    <mat-form-field class="example-full-width">
-      <mat-label>Email</mat-label>
-      <input type="email" matInput [formControl]="emailFormControl" placeholder="Ex. pat@example.com" />
-      <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
-        Please enter a valid email address
-      </mat-error>
-      <mat-error *ngIf="emailFormControl.hasError('required')"> Email is <strong>required</strong> </mat-error>
+    <mat-form-field appearance="outline">
+      <mat-label>Name</mat-label>
+      <input matInput placeholder="Placeholder" />
+      <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
     </mat-form-field>
   </div>
   <div class="celestials__form__buttons">
